# CPP_Homework

Project/TIMER/: CMakeLists.txt
Project/TIMER/src/: CMakeLists.txt  Config.cpp  Session.cpp  Statistics.cpp  Timer.cpp  UI.cpp  main.cpp
module_1_lesson_1/: task_1.cpp  task_2.cpp  task_3.txt  task_4.cpp
module_1_lesson_10/: 1_Corrections.cpp
module_1_lesson_11/: 1_Caesar_Cipher.cpp  2_Email_validation.cpp  3_IP_address_validation.cpp  4_Tic_Tac_Toe.cpp
module_1_lesson_2/: 1_Variables_and_types.cpp  2_Output_of_variables.cpp  3_Improving_the_racer.cpp  4_Product_cost_calculator.cpp  5_Time_time.cpp  6_Incomprehensible_receipt.cpp
module_1_lesson_3/: 1_User_input_task_1.cpp  2_User_input_task_2.cpp  3_String_type_task_1.cpp  4_String_type_task_2.cpp  5_Bus_simulator.cpp  6_Swapping_variables.cpp  7_Malicious_pests.cpp
module_1_lesson_4/: 10_Improving_barbers.cpp  11_Menu.cpp  1_Discount_calculator.cpp  2_Car.cpp  3_Number_modulus.cpp  4_Barbers.cpp  5_Minimum_of_2_numbers.cpp  6_Adding_numbers_in_mind.cpp  7_Checking_even_number.cpp  8_Experience_calculator.cpp  9_Multiplicity_of_number.cpp
module_1_lesson_5/: 10_May_holidays_complication.cpp  11_ATM_machine_2.cpp  12_Brick_complication.cpp  13_Sad_coming_of_age.cpp  1_Coordinate_plane.cpp  2_ATM_machine.cpp  3_Logical_operators_task_1.cpp  4_Bridge_and_overload.cpp  5_Triangle.cpp  6_Military_enlistment_office.cpp  7_Winnie-the-Pooh.cpp  8_Normal_flight.cpp  9_May_holidays.cpp
module_1_lesson_6/: 10_Military_time.cpp  11_Cuckoo.cpp  12_Too_large_numbers.cpp  13_Collectors.cpp  14_Lucky_ticket.cpp  15_Fibonacci_sequence.cpp  16_Deposit.cpp  1_Manager.cpp  2_Buy_an_elephant.cpp  3_Exponents_table.cpp  4_Reminder.cpp  5_ATM_machine_3.cpp  6_Sum.cpp  7_ATM_machine_4.cpp  8_Cadastral_problems.cpp  9_Leather_bag.cpp
module_1_lesson_7/: 10_Coffee_machine.cpp  11_Red_Mars.cpp  12_Frame.cpp  13_Coordinate_axes.cpp  14_Important_announcements.cpp  1_Cuckoo.cpp  2_Sum.cpp  3_Multiplication_table.cpp  4_Sum_of_odd_numbers.cpp  5_Manager.cpp  6_Password.cpp  7_Cadastral_problems.cpp  8_Die_Hard.cpp  9_Food_supplies.cpp
module_1_lesson_8/: 10_Toy_Story.cpp  11_Killer_Steam.cpp  12_Kenyan_Runner.cpp  13_Pendulum.cpp  1_Nuts.cpp  2_Health_promotion.cpp  3_Regular_customer.cpp  4_Coo.cpp  5_Computer_vision.cpp  6_Weather_station.cpp  7_Accuracy.cpp  8_Space_simulator.cpp  9_Immolate_Improved.cpp
module_1_lesson_9/: task_1.cpp  task_2.cpp
module_2_lesson_1/: 1_Block_of_Flats.cpp  2_Sorting.cpp  3_Using_assert.cpp  4_Row_of_Numbers.cpp
module_2_lesson_2/: 10_Using_push_back_task_2.cpp  11_Using_push_back_task_3_v1.cpp  11_Using_push_back_task_3_v2.cpp  12_Practical_work_task_1.cpp  13_Practical_work_task_2.cpp  14_Practical_work_task_3.cpp  1_Introduction_to_vector_task_1.cpp  2_Introduction_to_vector_task_2.cpp  3_Introduction_to_vector_task_3.cpp  4_Robots_queue.cpp  5_Hospital.cpp  6_Robots_and_corruption.cpp  7_Deleting_an_element_task_1.cpp  8_Deleting_an_element_task_2.cpp  9_Using_push_back_task_1.cpp
module_2_lesson_3/: 1_Banquet_table.cpp  2_Tic_Tac_Toe.cpp  3_Matrices.cpp  4_Multiplying_matrix_on_vector.cpp  5_Bubble_wrap.cpp  6_Snake.cpp  7_Almost_Minecraft.cpp
module_2_lesson_4/: 1_Array_algorithms_task_1.cpp  2_Array_algorithms_task_2.cpp  3_Array_algorithms_task_3.cpp  4_Array_algorithms_task_4.cpp
module_2_lesson_6/: 1_Pointers_task_1.cpp  2_Pointers_task_2.cpp  3_Pointers_task_3.cpp
module_2_lesson_7/: 1_Functions_task_1.cpp  2_Functions_task_2.cpp  3_Functions_task_3.cpp
module_3_lesson_1/: task_2.cpp  task_4.cpp
module_3_lesson_1/task_1/: task_1.sln
module_3_lesson_1/task_3/: task_3.sln
module_3_lesson_1/task_5/: task_5.sln
module_3_lesson_10/: task_1.cpp  task_2.cpp  task_3  task_3.cpp
module_3_lesson_11/: task_1.cpp  task_2.cpp
module_3_lesson_11/task_1/: CMakeLists.txt  README.md
module_3_lesson_11/task_1/src/: CMakeLists.txt  animals.cpp  main.cpp  talents.cpp
module_3_lesson_11/task_2/: README.md
module_3_lesson_11/task_2/src/: CMakeLists.txt  circle.cpp  main.cpp  rectangle.cpp  triangle.cpp
module_3_lesson_12/task_1/: main.cpp
module_3_lesson_12/task_2/: CMakeLists.txt  main.cpp
module_3_lesson_12/task_3/: main.cpp
module_3_lesson_13/: task_1.cpp  task_2.cpp
module_3_lesson_13/task_1/: README.md
module_3_lesson_13/task_2/: CMakeLists.txt  README.md
module_3_lesson_14/task_1/: CMakeLists.txt  README.md  main.cpp
module_3_lesson_15/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
module_3_lesson_2/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
module_3_lesson_3/: task_1.cpp  task_2.cpp  task_3.cpp
module_3_lesson_4/: task_1.cpp  task_2.cpp  task_3.cpp
module_3_lesson_5/: task_1.cpp  task_2.cpp
module_3_lesson_6/: task_1.cpp  task_2.cpp  task_3.cpp
module_3_lesson_7/: task_1.cpp  task_2.cpp
module_3_lesson_7/task_1/src/: CMakeLists.txt  coordinates.cpp  instruments.cpp  main.cpp  utility.cpp
module_3_lesson_7/task_2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp  utility.cpp
module_3_lesson_8/: task_1.cpp  task_2.cpp  task_3.cpp
module_3_lesson_8/task_2/src/: CMakeLists.txt  main.cpp  phone.cpp  phonebook.cpp
module_3_lesson_8/task_3/src/: CMakeLists.txt  main.cpp  screen.cpp  utility.cpp  window.cpp
module_3_lesson_9/: task_1.cpp  task_2.cpp
module_3_lesson_9/task_2/src/: BoundingBox.cpp  CMakeLists.txt  Circle.cpp  Colours.cpp  Rectangle.cpp  Shape.cpp  Square.cpp  Triangle.cpp  main.cpp
module_3_lesson_9/task_3/src/: CMakeLists.txt  ChiefExecutive.cpp  Employee.cpp  Manager.cpp  TeamMember.cpp  WorkType.cpp  main.cpp
module_4_lesson_1/: CMakeLists.txt
module_4_lesson_1/src/: CMakeLists.txt  conditions.cpp  gameplay.cpp  main.cpp  players.cpp
module_4_lesson_2/: README.md
module_4_lesson_2/module_4_lesson_2/: CMakeLists.txt
module_4_lesson_2/module_4_lesson_2/lib/: gameplay.cpp
module_4_lesson_2/module_4_lesson_2/src/: main.cpp
module_4_lesson_3/: TicTacToe.cpp
module_4_lesson_3/module_4_lesson_3/src/: Board.cpp  CMakeLists.txt  ComputerPlayer.cpp  Game.cpp  HumanPlayer.cpp  Player.cpp
(+196 files in other folders)
